[gd_scene load_steps=3 format=3 uid="uid://ud7gghet8hb1"]

[ext_resource type="Script" uid="uid://0r36ki0oy5a4" path="res://menu.gd" id="1_5idg8"]
[ext_resource type="Script" uid="uid://mgl10gti10wi" path="res://label.gd" id="1_mi5tt"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5idg8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.69215417, 0.0003770563, 0.69615656, 1)

[node name="MenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="Score" type="Label" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Pharma Clicker"
script = ExtResource("1_mi5tt")

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/HBoxContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MenuContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MenuContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Load Game"

[node name="QuitButton" type="Button" parent="MenuContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Quit"

[node name="AddButton" type="Button" parent="MenuContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Add"

[connection signal="pressed" from="MenuContainer/HBoxContainer/VBoxContainer/LoadGameButton" to="." method="load_game"]
[connection signal="pressed" from="MenuContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="quit_game"]
[connection signal="pressed" from="MenuContainer/HBoxContainer/VBoxContainer/AddButton" to="." method="add_to_score"]
